Create authentication controller and jwt token